Agregando componentes de iconos y botones

--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Spotifu</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <div class="icon-home">
-        
-    </div>
+<body class="body">
+    <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir"> 
+        <i class="icon-play" aria-hidden="true"></i>
+    </button>
+
+    <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir"> 
+        <i class="icon-play" aria-hidden="true"></i>
+    </button>
+
+    <button class="buttonIcon" aria-label="Reproducir" title="Reproducir"> 
+        <i class="icon-play" aria-hidden="true"></i>
+    </button>
+  
+  
+   
 </body>
 </html>
