Estilos al logo

--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body">
-    <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir"> 
-        <i class="icon-play" aria-hidden="true"></i>
-    </button>
+    <header class="logo" role="banner"> 
+        <a href="/" aria-current="page">
+            <img src="./images/spotifu-logo.png" class = "logo-image"alt="Logo de Spotifu" title="Logo de Spotifu" width="112" height="32">
+        </a>
+    </header>
+    <div>
+        <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir"> 
+            <i class="icon-play" aria-hidden="true"></i>
+        </button>
 
-    <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir"> 
-        <i class="icon-play" aria-hidden="true"></i>
-    </button>
+        <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir"> 
+            <i class="icon-play" aria-hidden="true"></i>
+        </button>
 
-    <button class="buttonIcon" aria-label="Reproducir" title="Reproducir"> 
-        <i class="icon-play" aria-hidden="true"></i>
-    </button>
-  
+        <button class="buttonIcon" aria-label="Reproducir" title="Reproducir"> 
+            <i class="icon-play" aria-hidden="true"></i>
+        </button>
+     </div>
   
    
 </body>
