--- a/index.html
+++ b/index.html
@@ -61,52 +61,72 @@
             <h2 class="list-title" id="playlist-navigation">Playlist</h2>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Lo mejor de los mejor</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Naruto al 100% para programar</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Para cantar en la ducha</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Sin parar</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Naruto openings</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Boku no pico</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> This is Pokémon</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
-                    <a href="#" class="link"> Más populares de la semana</a>
+                    <span class="ellipsis">
+                    <a href="#" class="link"> Más populares de la semana para ti que eres una pro</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Mis pistas de shazam</a>
+                    </span>
                 </li>
             </ul>
             <ul class="list-content">
                 <li class="list-item">
+                    <span class="ellipsis">
                     <a href="#" class="link"> Audio Library</a>
+                    </span>
                 </li>
             </ul>
          </nav>
