Agregando estilos al slider

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body">
+
+    <div class="slider">
+        <div class="slider-progress">
+            <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
+        </div>
+    </div>
+
     <div class="sidebar">
         <header class="logo" role="banner"> 
             <a href="/" aria-current="page">
@@ -132,7 +139,7 @@
          </nav>
     </div>
    
-    
+   
         <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir"> 
             <i class="icon-play" aria-hidden="true"></i>
         </button>
