Agregando los controles y el playback

--- a/index.html
+++ b/index.html
@@ -9,11 +9,35 @@
 </head>
 <body class="body">
 
-    <div class="slider">
-        <div class="slider-progress">
-            <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
-        </div>
+<div class="playerControls">    
+    <div class="playerControls-buttons">
+        <button class="buttonIcon" aria-label="Retroceder" title="Retroceder"> 
+            <i class="icon-prev" aria-hidden="true"></i>
+        </button>
+
+        <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir"> 
+            <i class="icon-play" aria-hidden="true"></i>
+        </button>
+
+        <button class="buttonIcon" aria-label="Adelantar" title="Adelantar"> 
+            <i class="icon-next" aria-hidden="true"></i>
+        </button>
     </div>
+
+    <div class="playerPlayback">
+        <span class="playerPlayback-progressTime">01:40</span>
+        <div class="playerPlayback-slider">
+            <div class="slider">
+                <div class="slider-progress">
+                    <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
+                </div>
+            </div>
+        </div>
+      
+        <span class="playerPlayback-progressTime">03:34</span>
+    </div>
+
+</div>
 
     <div class="sidebar">
         <header class="logo" role="banner"> 
@@ -140,13 +164,6 @@
     </div>
    
    
-        <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir"> 
-            <i class="icon-play" aria-hidden="true"></i>
-        </button>
-
-        <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir"> 
-            <i class="icon-play" aria-hidden="true"></i>
-        </button>
 
 
      
