Detalles en el playlist A

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body class="body">
 
+<div class="playlistA">
+    <div class="playlistA-cover">
+        <img src="./images/anime-hits.png" height= "150" widht = "150" alt="Cover de la playlist Anime Hits">
+        <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir"> 
+            <i class="icon-play" aria-hidden="true"></i>
+        </button>
+    </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your Name, Weathing With You</h4>
 
+  
+</div>
 
 
 <div class="sidebar">
