--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 <body class="body">
 
+    <div class="playlistB">
+        <div class="playlistB-cover">
+            <img src="./images/anime-hits.png" width = "76" height="76" alt="Cover de la playlist">
+        </div>
+        <div class="playlistB-details">
+            <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+            <div class="playlistB-control">
+                <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir"> 
+                    <i class="icon-play" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+    </div>
 <div class="playlistA">
     <div class="playlistA-cover">
         <img src="./images/anime-hits.png" height= "150" widht = "150" alt="Cover de la playlist Anime Hits">
