Agregando el elemento de busqueda

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body class="body">
 
+    <form  class= "search" action="" role="search" aria-label="Buscar por Artistas, canciones o podcasts">
+        <i class="icon-search" aria-hidden="true"> </i>
+        <input type="search" placeholder="Buscar por Artistas, canciones o podcasts">
+    </form>
+
     <section class="playlistList" aria-labelledby="region1">
         <div class="playlistList-top">
             <h2 class= "playlistList-title" id="region1">
