Agregando los botones para navegacion

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body">
+   
 
     <form  class= "search" action="" role="search" aria-label="Buscar por Artistas, canciones o podcasts">
         <i class="icon-search" aria-hidden="true"> </i>
@@ -19,6 +20,16 @@
             <h2 class= "playlistList-title" id="region1">
                 Buenas noches
             </h2>
+
+            <div class="navigation">
+                <button class="navigation-prev" aria-label="Volver" title="Volver">
+                    <i class="icon-arrowLeft" aria-hidden="true"></i>
+                </button>
+                <button class ="navigation-next"  disabled aria-label="Avanzar" title="Avanzar">
+                    <i class="icon-arrowRight" aria-hidden="true"></i>
+                </button>
+            </div>
+
         </div>
         <div class="playlistList-container">
             <div class="playlistB">
@@ -146,6 +157,16 @@
             <h2 class= "playlistList-title" id="region1">
                 Escuchado recientemente
             </h2>
+
+            <div class="navigation">
+                <button class="navigation-prev" aria-label="Volver" title="Volver">
+                    <i class="icon-arrowLeft" aria-hidden="true"></i>
+                </button>
+                <button class ="navigation-next"  disabled aria-label="Avanzar" title="Avanzar">
+                    <i class="icon-arrowRight" aria-hidden="true"></i>
+                </button>
+            </div>
+            
         </div>
         <div class="playlistList-container">
             <div class="playlistA">
