--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
     <title>Spotifu</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="body">
-   
+<body class="body"> 
+    <div class="sticky">
+        <header class="header" aria-label="Barra superior y menú del usuario">
+            <div class="navigation">
+                <button class="navigation-prev" aria-label="Volver" title="Volver">
+                    <i class="icon-arrowLeft" aria-hidden="true"></i>
+                </button>
+                <button class ="navigation-next"  disabled aria-label="Avanzar" title="Avanzar">
+                    <i class="icon-arrowRight" aria-hidden="true"></i>
+                </button>
+            </div>
+    
+            <form  class= "search" action="" role="search" aria-label="Buscar por Artistas, canciones o podcasts">
+                <i class="icon-search" aria-hidden="true"> </i>
+                <input type="search" placeholder="Buscar por Artistas, canciones o podcasts">
+            </form>
+       </header>
+    </div>
+  
 
-    <form  class= "search" action="" role="search" aria-label="Buscar por Artistas, canciones o podcasts">
-        <i class="icon-search" aria-hidden="true"> </i>
-        <input type="search" placeholder="Buscar por Artistas, canciones o podcasts">
-    </form>
 
     <section class="playlistList" aria-labelledby="region1">
         <div class="playlistList-top">
@@ -166,7 +179,7 @@
                     <i class="icon-arrowRight" aria-hidden="true"></i>
                 </button>
             </div>
-            
+
         </div>
         <div class="playlistList-container">
             <div class="playlistA">
